Added validation error class for associations

--- a/app/views/rails_admin/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/_belongs_to_association.html.erb
@@ -15,7 +15,7 @@
               <div class="formSection">
                 <p>
                   <%= label_tag label %>
-                  <%= select(model_name, child_key, collection, {:include_blank => true, :selected => selected.to_s}) %>
+                  <%= select model_name, child_key, collection, {:include_blank => true, :selected => selected.to_s}, :class => "#{errors_exist ? "errorField" : nil}" %>
                 </p>
 
               </div>
