--- a/app/views/rails_admin/_has_many_association.html.erb
+++ b/app/views/rails_admin/_has_many_association.html.erb
@@ -9,7 +9,7 @@
               <p>
                 
                   <%= label_tag label %>
-                  <%= select "associations", association_name, collection, :id => association_name, :selected => selected.map{|o| o.id.to_s}, :multiple => true %>
+                  <%= select "associations", association_name, collection, :id => association_name, :selected => selected.map{|o| o.id.to_s}, :multiple => true, :class => "#{errors_exist ? "errorField" : nil}"%>
 
               </p>
 
