Add back tool tip/help text on new and edit views. Closes #34

--- a/app/views/rails_admin/_text.html.erb
+++ b/app/views/rails_admin/_text.html.erb
@@ -6,3 +6,4 @@
 %>
               <%= label_tag label %>
               <%= text_area model_name, property_name, :cols => 50, :rows => 10, :class => "textField" %>
+              </p><p class="help" style="clear:both; border-top:2px solid #FFF;"><%= required ? "Required." : "Optional." %>
