--- a/app/views/rails_admin/_date.html.erb
+++ b/app/views/rails_admin/_date.html.erb
@@ -8,3 +8,4 @@
                 <%= label_tag "#{property_name}", label %>
 
                 <%= text_field model_name, property_name, :class => "dateField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
+                </p><p class="help"><%= required ? "Required." : "Optional." %>
