--- a/app/views/rails_admin/_properties.html.erb
+++ b/app/views/rails_admin/_properties.html.erb
@@ -2,6 +2,7 @@
               <% # reject some attributes and loop through the properties
               %>
               <% @properties.reject{|property| [:id, :created_at, :created_on, :deleted_at, :updated_at, :updated_on, :deleted_on].include?(property[:name]) || belongs_to_keys.include?(property[:name])}.each do |property| %>
+              <% required = !property[:nullable?] %>
               
               <% property_name = property[:name] %>
               <% property_type = property[:type] %>
@@ -12,5 +13,11 @@
               	<% if errors_exist %>
                 <span class="errorMessage"><%= "#{property_name.capitalize} #{@object.errors[property_name].first}" %></span>
                 <% end %>
+            	</p>
+            	<p class="help"><%= required ? "Required." : "Optional." %>
+            	  <% if property_type == :string %>
+            	    <% length = property[:length] %>
+            	    <%= length %> <%= length == 1 ? "character." : "characters or fewer." %>
+            	  <% end %>
             	</p>
               <% end %>
