--- a/app/views/rails_admin/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/_belongs_to_association.html.erb
@@ -2,6 +2,11 @@
   child_key = belongs_to_association[:child_key].first
   collection = MerbAdmin::AbstractModel.new(belongs_to_association[:parent_model]).all.map{|object| [object_label(object), object.id]}.sort_by{|object| object.first}
   selected = @object.send(child_key)
+
+  if selected.nil? && params["associations"]
+    selected = params["associations"][child_key.to_param.pluralize].to_i
+  end
+  
   label = belongs_to_association[:pretty_name]
   required = false
   errors_exist = !(@object.errors[child_key].nil? || @object.errors[child_key].empty?)
@@ -15,7 +20,7 @@
               <div class="formSection">
                 <p>
                   <%= label_tag label %>
-                  <%= select model_name, child_key, collection, {:include_blank => true, :selected => selected.to_s}, :class => "#{errors_exist ? "errorField" : nil}" %>
+                  <%= select model_name, child_key, collection, {:include_blank => true, :selected => selected}, :class => "#{errors_exist ? "errorField" : nil}" %>
                 </p>
 
               </div>
