--- a/app/views/rails_admin/_has_many_association.html.erb
+++ b/app/views/rails_admin/_has_many_association.html.erb
@@ -1,20 +1,29 @@
 <%
   association_name = has_many_association[:name]
+  
   child_key = has_many_association[:child_key].first
   
   collection = MerbAdmin::AbstractModel.new(has_many_association[:child_model]).all.map{|object| [object_label(object), object.id]}.sort_by{|object| object.first}
-  selected = @object.send(association_name)
-  label = has_many_association[:pretty_name]
+
+  selected = @object.send(association_name).map{|o| o.id.to_s}
   
+  if selected.empty? && params["associations"]
+    select = params["associations"][association_name.to_param.pluralize].to_a.map{|o| o.to_i}
+  end
+  
+  label = has_many_association[:pretty_name]
   errors_exist = !(@object.errors[child_key].nil? || @object.errors[child_key].empty?)
+
 %>
             <h2><%= label %></h2>
             <div class="formSection">
               <p>
                 
                   <%= label_tag label %>
-                  <%= select "associations", association_name, collection, :id => association_name, :selected => selected.map{|o| o.id.to_s}, :multiple => true, :class => "#{errors_exist ? "errorField" : nil}"%>
-
+               <!-- >   select "associations", association_name, collection, :id => association_name, :selected => selected, :class => "#{errors_exist ? "errorField" : nil}", :multiple => true -->
+                  <select id="associations_<%= association_name %>" name="associations[<%= association_name %>][]" multiple="multiple">
+                  <%= options_for_select(collection,select) %>
+                  </select>
               </p>
 
             </div>
