--- a/app/views/rails_admin/_has_one_association.html.erb
+++ b/app/views/rails_admin/_has_one_association.html.erb
@@ -3,6 +3,12 @@
   association_name = has_one_association[:name]
   collection = MerbAdmin::AbstractModel.new(has_one_association[:child_model]).all.map{|object| [object_label(object), object.id]}.sort_by{|object| object.first}
   selected = @object.send(association_name)
+  
+  if selected.nil? && params["associations"]
+    selected = params["associations"][child_key.to_param.pluralize].to_i
+  end
+  
+  
   label = has_one_association[:pretty_name]
   required = false
   errors_exist = !(@object.errors[child_key].nil? || @object.errors[child_key].empty?)
@@ -14,7 +20,7 @@
               <div class="formSection">
                 <p>
                   <%= label_tag label %>
-                  <%= select("associations", association_name, collection, {:id => association_name, :include_blank => true, :selected => selected ? selected.id.to_s : nil},:class => "#{errors_exist ? "errorField" : nil}") %>
+                  <%= select("associations", association_name, collection, {:id => association_name, :include_blank => true, :selected => selected},:class => "#{errors_exist ? "errorField" : nil}") %>
                 </p>
 
               </div>
