Added markup, style and javascript to multiple associations

--- a/app/views/layouts/form.html.erb
+++ b/app/views/layouts/form.html.erb
@@ -11,6 +11,7 @@
   <%= javascript_include_tag('prototype-date-extensions.js') %>
   <%= javascript_include_tag('getElementsBySelector.js') %>
   <%= javascript_include_tag('datepicker.js') %>
+  <%= javascript_include_tag('associations.js') %>
   <%= stylesheet_link_tag('datepicker.css') %>
 
 
