--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -238,3 +238,107 @@ p.help{
 	float:left;
 	margin-top:4px;
 }
+.many{
+}
+
+.manySelector{
+	clear:both;
+	margin-left:102px;
+}
+
+.manySelector select{
+	padding:5px;
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:12px;
+	width:191px;
+	border-left:1px solid #e2e3ea;
+	border-top:1px solid #abadb3;
+	border-bottom:1px solid #e3e9ef;
+	border-right:1px solid #dbdfe6;
+	float:left;
+}
+
+.searchMany{
+	background:url(/images/magnifier.png) no-repeat;
+	padding-left:19px;
+	padding-top:5px;
+	font-size:11px;
+	font-family:Verdana, Geneva, sans-serif;
+	padding-bottom:5px;
+	background-position:2px 4px;
+	border-left:1px solid #e2e3ea;
+	border-top:1px solid #abadb3;
+	border-bottom:1px solid #e3e9ef;
+	border-right:1px solid #dbdfe6;
+	margin-bottom:5px;
+	width:170px;
+	color:#AAA;
+}
+
+.add_elem{
+	float:left;
+	border:none;
+	margin-top:50px;
+	margin-right:3px;
+	margin-left:3px;
+}
+
+.remove_elem{
+	float:left;
+	border:none;
+	margin-top:74px;
+	margin-left:-19px;
+}
+
+.many_controls{
+	margin-left:103px;
+	clear:both;
+}
+
+.many_controls a img{
+	border:none;
+	position:relative;
+	top:4px;
+}
+
+.add_all{
+	left:2px;
+}
+
+.many_controls a{
+	text-decoration:none;
+	color:#000;
+	font-size:11px;
+	font-weight:bold;
+}
+
+.clear_all{
+	margin-left:125px;
+	margin-right:3px;
+}
+
+.many_header{
+	margin-left:103px;
+	margin-top:8px;
+}
+
+.many_header p{
+	float:left;
+	margin-top:-5px;
+	margin-left:22px;
+	font-size:10px;
+	line-height:7px;
+}
+
+.many_header p img{
+	position:relative;
+	top:4px;
+}
+
+.many_header p strong{
+	display:block;
+}
+
+.searchMany{
+	float:left;
+}
