--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -23,7 +23,8 @@
         <h1>Rails Admin</h1>
       </div>
 
-<% # FIXME no need to get whole array list with every model %>
+<% # FIXME no need to get whole array list with every model
+%>
 <%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
 
       <div id="headerRight">
