--- a/app/views/rails_admin/_has_one_association.html.erb
+++ b/app/views/rails_admin/_has_one_association.html.erb
@@ -1,7 +1,7 @@
 <%
   child_key = has_one_association[:child_key].first
   association_name = has_one_association[:name]
-  collection = MerbAdmin::AbstractModel.new(has_one_association[:child_model]).all.map{|object| [object_label(object), object.id]}.sort_by{|object| object.first}
+  collection = RailsAdmin::AbstractModel.new(has_one_association[:child_model]).all.map{|object| [object_label(object), object.id]}.sort_by{|object| object.first}
   selected = @object.send(association_name)
 
   if selected.nil? && params["associations"]
