Made tests work on ruby 1.8.7. Added 404 handling and 3 more tests regarding 404 status

--- a/app/views/rails_admin/_properties.html.erb
+++ b/app/views/rails_admin/_properties.html.erb
@@ -11,7 +11,7 @@
               <p>
 <%= render :partial => property_type.to_s, :locals => {:property => property, :errors_exist => errors_exist} %>
               	<% if errors_exist %>
-                <span class="errorMessage"><%= "#{property_name.capitalize} #{@object.errors[property_name].first}" %></span>
+                <span class="errorMessage"><%= "#{property_name.to_param.capitalize! } #{@object.errors[property_name].first}" %></span>
                 <% end %>
             	</p>
             	<p class="help"><%= required ? "Required." : "Optional." %>
