Add save and edit button. Closes #39

--- a/app/views/rails_admin/new.html.erb
+++ b/app/views/rails_admin/new.html.erb
@@ -21,6 +21,9 @@
               <li id="saveAddContainer">
                 <%= submit_tag "Save and add another", :name => "_add_another", :id => "saveAdd_btn" %>
               </li>
+              <li id="saveEditContainer">
+                <%= submit_tag "Save and edit", :name => "_add_edit", :id => "saveEdit_btn" %>
+              </li>
               <li id="cancelContainer">
                 <%= submit_tag "cancel", :name => "_continue", :id => "cancel_btn" %>
               </li>
