--- a/app/views/rails_admin/edit.html.erb
+++ b/app/views/rails_admin/edit.html.erb
@@ -18,8 +18,8 @@
         	    <li id="saveContainer">
         	      <%= submit_tag "Save", :class => "default", :name => "_save", :id => "save_btn" %>
         	    </li>
-              <li id="saveAddContainer">
-                <%= submit_tag "Save and add another", :name => "_add_another", :id => "saveAdd_btn" %>
+              <li id="saveEditContainer">
+                <%= submit_tag "Save and edit", :name => "_add_edit", :id => "saveEdit_btn" %>
               </li>
               <li id="cancelContainer">
                 <%= submit_tag "cancel", :name => "_continue", :id => "cancel_btn" %>
