Applying changes from the master branch to the plugin

--- a/app/views/rails_admin/index.html.erb
+++ b/app/views/rails_admin/index.html.erb
@@ -29,7 +29,7 @@
           <div class="section">
             <h2>History</h2>
             <div id="timeline">
-              <a href="#" id="arrowLeft"><img src="/images/arrow_left.png" alt="Left" /></a>
+              <a href="#" id="arrowLeft"><img src="images/arrow_left.png" alt="Left" /></a>
               <div id="timelineSlider">
                 <ul>
                   <li>Ian '10
@@ -60,11 +60,11 @@
                 </ul>
 
                 <div id="handler">
-                  <img src="/images/handler.png"/>
+                  <img src="images/handler.png"/>
                 </div>
               </div>
 
-              <a href="#" id="arrowRight"><img src="/images/arrow_right.png" alt="Right" /></a>
+              <a href="#" id="arrowRight"><img src="images/arrow_right.png" alt="Right" /></a>
             </div>
             <p id="listing">Listing <strong>IAN'10</strong> History:</p>
             <ul id="history">
