--- a/app/views/rails_admin/_navigation.html.erb
+++ b/app/views/rails_admin/_navigation.html.erb
@@ -1,13 +1,16 @@
+<%
+  max_visible_tabs = 2
+%>
       <ul id="nav">
         <li <%if @page_type == "dashboard" %>id="active"<% end %>><%= link_to("Dashboard", rails_admin_dashboard_path) %></li>
-<% @abstract_models[0..5].each do |abstract_model| %>
+<% @abstract_models[0..max_visible_tabs-1].each do |abstract_model| %>
         <li <%if @page_type == abstract_model.pretty_name.downcase %>id="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
 <% end %>
-<% if @abstract_models.size > 5 %>
+<% if @abstract_models.size > max_visible_tabs-1%>
         <li id="more">
         	<a href="#">&raquo;</a>
           <ul>
-          <% @abstract_models[6..@abstract_models.size].each do |abstract_model| %>
+          <% @abstract_models[max_visible_tabs..@abstract_models.size].each do |abstract_model| %>
           <li <%if @page_type == abstract_model.pretty_name.downcase %>id="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
           <% end %>
           </ul>
