Fixed a css bug that was moving the navigation when the breadcrumb was large

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -31,6 +31,7 @@ body{
 }
 
 ul.breadcrumb{
+  position:absolute;
 	list-style-type:none;
 	height:14px;
 }
@@ -58,7 +59,7 @@ ul.breadcrumb li a:hover{
 }
 
 #headerLeft h1{
-	margin-top:8px;
+	margin-top:25px;
 	font-weight:normal;
 	font-size:22px;
 
