--- a/app/views/rails_admin/list.html.erb
+++ b/app/views/rails_admin/list.html.erb
@@ -68,7 +68,8 @@
         <ul class="infoRow <%= index % 2 == 0 ? nil : "greyRow" %>">
           <li class="otherRow otherLeft"><%= link_to("...",params.reject{|key,value| key == "set"}.merge(:set => params[:set].to_i - 1)) %></li>
           <% @properties.each do |property| %>
-          <li class="<%= getColumnType(property,"Row") %>"><%= object_property(object, property) %></li>
+          <% output_type = formatOutput(property,object_property(object, property)) %>
+          <li class="<%= getColumnType(property,"Row") %>"><%= output_type %></li>
           <% end %>
           <li class="otherRow otherRight"><%= link_to("...",params.reject{|key,value| key == "set"}.merge(:set => params[:set].to_i + 1)) %></li>
           <li class="actionRow editAction"><%= link_to("Edit", rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></li>
