--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsAdmin</title>
-  <%= stylesheet_link_tag :all %>
+  <title>Dummy</title>
+
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
