--- a/spec/dummy/app/views/rails_admin/index.html.erb
+++ b/spec/dummy/app/views/rails_admin/index.html.erb
@@ -29,48 +29,35 @@
           <div class="section">
             <h2>History</h2>
             <div id="timeline">
-              <a href="#" id="arrowLeft"><img src="images/arrow_left.png" alt="Left" /></a>
+              <a href="javascript:void(0)" id="arrowLeft" ref="-1"><img src="/images/arrow_left.png" alt="Left" /></a>
               <div id="timelineSlider">
+                <% max = @history[0].number %>
+                <% @history.each{|t| max = t.number if t.number > max} %>
                 <ul>
-                  <li>Ian '10
+                  <% @history.each do |t| %>
+                  <% procent = (t.number * 100) / max unless max == 0 %>
+                  <% indicator_type = getIndicator(procent)%>
+                  <li><span><%= t.number != 0 ? Time.parse("01/#{t.month}/#{t.year}").strftime("%B %Y") : "No activity" %></span>
                     <span class="bars">
-                      <span class="indicator" style="height:15%"></span>
+                      <span class="indicator <%= indicator_type %>" style="height:<%= procent %>%"></span>
                     </span>
                   </li>
-                  <li>Feb '10
-                    <span class="bars">
-                      <span class="indicator medium" style="height:50%"></span>
-                    </span>
-                  </li>
-                  <li>Mar '10
-                    <span class="bars">
-                      <span class="indicator" style="height:20%"></span>
-                    </span>
-                  </li>
-                  <li>Apr '10
-                    <span class="bars">
-                      <span class="indicator high" style="height:80%"></span>
-                    </span>
-                  </li>
-                  <li>May '10
-                    <span class="bars">
-                      <span class="indicator" style="height:30%"></span>
-                    </span>
-                  </li>
+                  <% end %>
                 </ul>
-
                 <div id="handler">
-                  <img src="images/handler.png"/>
+                  <img src="/images/handler.png"/>
                 </div>
               </div>
 
-              <a href="#" id="arrowRight"><img src="images/arrow_right.png" alt="Right" /></a>
+              <a href="javascript:void(0)" id="arrowRight" ref="1"><img src="/images/arrow_right.png" alt="Right" /></a>
             </div>
-            <p id="listing">Listing <strong>IAN'10</strong> History:</p>
-            <ul id="history">
-              <li>John added <em>Poll #1</em></li>
-              <li>John added a <em>Poll type - Question</em></li>
-              <li>John deleted <em>Poll #1</em></li>
-            </ul>
+            <div id="listingHistory">
+              <p id="listing">Listing <strong><%= Time.now.strftime("%B %Y")%></strong> History:</p>
+              <ul id="history">
+                <% @historyListing.each do |t|%>
+                <li>John added <em>Poll #1</em></li>
+                <% end %>
+              </ul>
+            </div>
           </div>
         </div>
