--- a/spec/dummy/app/views/rails_admin/_datetime.html.erb
+++ b/spec/dummy/app/views/rails_admin/_datetime.html.erb
@@ -7,4 +7,4 @@
 %>
                 <%= label_tag "#{property_name}", label %>
 
-                <%= text_field model_name, property_name,  :maxlength => length, :class => "datetimeField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
+                <%= text_field model_name, property_name, :class => "datetimeField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
