Made tests work with all the new changes

--- a/spec/dummy/app/views/rails_admin/_userinfo.html.erb
+++ b/spec/dummy/app/views/rails_admin/_userinfo.html.erb
@@ -1,6 +1,6 @@
 <ul class="breadcrumb">
   <li>
-    <a href="#"><%= current_user.email.split("@")[0] %></a>
+    <a href="#"><%= %></a>
   </li>
   <li>|</li>
   <li>
@@ -8,6 +8,6 @@
   </li>
   <li>|</li>
   <li>
-    <a href="<%= destroy_user_session_path() %>">Log out</a>
+    <a href="<%=  %>">Log out</a>
   </li>
 </ul>
