--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -64,25 +64,10 @@
         </ul>
         <h1>Rails Admin</h1>
       </div>
-
-<% # FIXME no need to get whole array list with every model
-%>
 <%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
 
       <div id="headerRight">
-        <ul class="breadcrumb">
-          <li>
-            <a href="#">John Doe</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="#">My profile</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="#">Log out</a>
-          </li>
-        </ul>
+<%= render(:partial => 'rails_admin/userinfo', :locals => {:current_user => current_user}) %>
       </div>
     </div>
     <div id="content">
